# criss-cross

./: CMakeLists.txt  aux-tuple-test.cc  aux-versor-test.cc  main.cc
aux/: freestanding-chars.hpp  io-support.hpp  packed-tuple.hpp  tuple-support.hpp  unique-handle.hpp  versor.hpp
aux/test/: freestanding-chars-test.cc  io-support-test.cc  packed-tuple-test.cc  tuple-support-test.cc  versor-test.cc
